k8s/consumidor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cliente-consumidor
  namespace: clientes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cliente-consumidor
  template:
    metadata:
      labels:
        app: cliente-consumidor
    spec:
      containers:
        - name: cliente-consumidor
          image: acrclientes.azurecr.io/cliente-consumidor:v2
          ports:
            - containerPort: 9095
