k8s/clientes-combinado-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientes-combinado
  namespace: clientes
spec:
  type: LoadBalancer
  selector:
    app: clientes-combinado
  ports:
    - name: microservicio
      port: 80
      targetPort: 8080
    - name: consumidor
      port: 81
      targetPort: 9095
