k8s/conbinacion-puertos.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientes-publico
  namespace: clientes
spec:
  type: LoadBalancer
  selector:
    app: clientes-combinado
  ports:
    - name: micro
      port: 80
      targetPort: 8080

    - name: consumidor
      port: 81
      targetPort: 9095
