k8s/consumidor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliente-consumidor
  namespace: clientes
spec:
  type: NodePort
  selector:
    app: cliente-consumidor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9095
      nodePort: 30095
