k8s/microservicio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliente-microservicio
  namespace: clientes
spec:
  type: LoadBalancer
  selector:
    app: cliente-microservicio
  ports:
    - name: clintes
      port: 80
      targetPort: 8080

    - name: consumidor
      port: 81
      targetPort: 9095
