k8s/posgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: clientes
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30032
