k8s/ingress-clientes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clientes-ingress
  namespace: clientes
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/microclientes"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /microclientes(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cliente-microservicio
                port:
                  number: 80
