k8s/ingress-consumidor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: con-ing
  namespace: cliente
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /microconsumidor(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cliente-consumidor
                port:
                  number: 80
